--- a/app/assets/stylesheets/molecules/_table.scss
+++ b/app/assets/stylesheets/molecules/_table.scss
@@ -2,6 +2,9 @@
 	&.table {
 		background-color: transparent;
 	}
+  &.table-brown-light {
+    background-color: $brown-light;
+  }
 }
 
 td.small {
