--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -55,7 +55,7 @@ section.offer-info
                   p.hint.text--brown__medium Por motivos de segurança, o número do endereço só será fornecido para os participantes da oferta.
             .offer-info__tax
               h2.title--up.text--green Taxas operacionais
-              table.table
+              table.table.table-brown-light
                 tbody
                   tr
                     td.width-80
