--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -99,7 +99,7 @@ section.about
             h2.title--up.text--yellow SEJA UM COORDENADOR DE ENTREGA
             p
               | Receba alimentos orgânicos no endereço da sua escolha, pagando pouco ou nada, conheça pessoas como você e seja um agente transformador da sua comunidade.
-            = link_to 'Ser um Coordenador', 'https://triboviva.typeform.com/to/ua7QEp', class: 'btn btn--sm btn--brown'
+            = link_to 'Seja um Coordenador', 'https://triboviva.typeform.com/to/ua7QEp', class: 'btn btn--sm btn--brown'
           .col-sm-4
             h2.title--up.text--brown Fique Conectado
             .socialLinks
