--- a/app/views/purchase_mailer/pending_payment.html.slim
+++ b/app/views/purchase_mailer/pending_payment.html.slim
@@ -20,10 +20,12 @@ ul
     li TOTAL: #{number_to_currency order.offer_value*order.quantity}
     br
 - if @purchase.payment_method == 'credit_card'
-  h2 TOTAL PAGO: #{number_to_currency @purchase.total}.
+  h2 VALOR DA TRANSAÇÃO: #{number_to_currency @purchase.taxes}.
+  h2 TOTAL PAGO: #{number_to_currency @purchase.total_with_taxes}.
 - elsif @purchase.payment_method == 'bank_slip'
-  h2 TOTAL A PAGAR: #{number_to_currency @purchase.total}.
-  p 
+  h2 VALOR DA TRANSAÇÃOGAR: #{number_to_currency @purchase.taxes}.
+  h2 TOTAL A PAGAR: #{number_to_currency @purchase.total_with_taxes}.
+  p
     | Você tem até as 23h59min de hoje (#{@purchase.created_at.strftime('%d/%m')}) para pagar.
     br
     | #{link_to 'Gerar boleto', @purchase.invoice_url}
