Improves about page text

--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -46,9 +46,8 @@
               .about__card__text
                 ol
                   li CONFIRA O RESUMO DA SUA COMPRA.
-                  li FAÇA O DEPÓSITO OU TRANSFERÊNCIA BANCÁRIA PARA A CONTA INDICADA.
-                  li ENVIE O COMPROVANTE DE PAGAMENTO PARA CONFIRMAR A COMPRA.
-                  small.text--yellow IMPORTANTE: A COMPRA SOMENTE SERÁ CONFIRMADA APÓS O ENVIO DO COMPROVANTE DE PAGAMENTO.
+                  li SELECIONE O MÉTODO DE PAGAMENTO
+                  li PROSSIGA COM AS INSTRUÇÕES INDICADAS PELO MÉTODO SELECIONADO (BOLETO OU TRANSFERÊNCIA).
 
           .col-sm-6.col-md-3
             .about__card
