--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,4 +1,4 @@
-- meta og: { title: "Tribo Viva", description: "A Tribo Viva é um novo sistema de consumo, formado por cidadãos e produtores locais de alimentos orgânicos. Nossa rede exclui atravessadores, viabilizando o acesso contínuo e sustentável a uma alimentação com mais saúde, inclusão social e melhor custo-benefício para todos os envolvidos.", url: request.url, image: "#{asset_url('logo.png')}" }
+- meta og: { title: "Tribo Viva", description: "A Tribo Viva é um novo sistema de consumo, formado por cidadãos e produtores locais de alimentos orgânicos. Nossa rede exclui atravessadores, viabilizando o acesso contínuo e sustentável a uma alimentação com mais saúde, inclusão social e melhor custo-benefício para todos os envolvidos.", url: request.url, image: "#{asset_url('og-triboviva.png')}" }
 
 section.hero
  .hero__slogan.text-center.text--white
